--- a/app/src/main/res/layout/clock_content.xml
+++ b/app/src/main/res/layout/clock_content.xml
@@ -4,159 +4,171 @@
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
-            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-                <com.example.shixi_a.myapplication.widget.SemiCircleRectView
-                    android:id="@+id/circle_in"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    app:backgroundColor="@color/colorPrimary"
-                    android:gravity="center"
-                    android:text="上"
-                    android:textColor="@color/white"/>
-                <com.example.shixi_a.myapplication.widget.SemiCircleRectView
-                    android:id="@+id/circle_in_dark"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    app:backgroundColor="@color/gray"
-                    android:gravity="center"
-                    android:text="上"
-                    android:textColor="@color/white"
-                    android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/tv_in"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="上班时间9:00"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark_grey"/>
-
-            </LinearLayout>
+            android:paddingBottom="30dp"
+            android:background="@color/defaultBack">
             <RelativeLayout
-                android:id="@+id/rl_clock_in"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:padding="10dp"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:id="@+id/clock_bg"
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:src="@drawable/checkno_bg"/>
-                <TextView
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:gravity="center"
-                    android:text="上班打卡     09:11:44"
-                    android:textSize="18sp"
-                    android:textColor="@color/white"
-                    android:id="@+id/clock_in"/>
-                <TextView
-                    android:id="@+id/local_in"
-                    android:layout_width="160dp"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_alignParentBottom="true"
-                    android:text="已进入Wi-Fi考勤范围"
-                    android:textColor="@color/gray"/>
+                    android:orientation="vertical"
+                    android:background="@color/white">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+                        <com.example.shixi_a.myapplication.widget.SemiCircleRectView
+                            android:id="@+id/circle_in"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            app:backgroundColor="@color/colorPrimary"
+                            android:gravity="center"
+                            android:text="上"
+                            android:textColor="@color/white"/>
+                        <com.example.shixi_a.myapplication.widget.SemiCircleRectView
+                            android:id="@+id/circle_in_dark"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            app:backgroundColor="@color/gray"
+                            android:gravity="center"
+                            android:text="上"
+                            android:textColor="@color/white"
+                            android:visibility="gone"/>
+                        <TextView
+                            android:id="@+id/tv_in"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="上班时间9:00"
+                            android:textSize="16sp"
+                            android:textColor="@color/dark_grey"/>
 
-            </RelativeLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-                <com.example.shixi_a.myapplication.widget.SemiCircleRectView
-                    android:id="@+id/circle_out"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    app:backgroundColor="@color/colorPrimary"
-                    android:gravity="center"
-                    android:text="下"
-                    android:textColor="@color/white"/>
-                <com.example.shixi_a.myapplication.widget.SemiCircleRectView
-                    android:id="@+id/circle_out_dark"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    app:backgroundColor="@color/gray"
-                    android:gravity="center"
-                    android:text="下"
-                    android:textColor="@color/white"
-                    android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/tv_out"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="下班时间18:00"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark_grey"/>
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/rl_clock_in"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:id="@+id/clock_bg"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp"
+                            android:src="@drawable/checkno_bg"
+                            android:layout_centerInParent="true"/>
 
-            </LinearLayout>
-            <RelativeLayout
-                android:id="@+id/rl_clock_out"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:src="@drawable/checkno_bg"/>
-                <TextView
-                    android:id="@+id/clock_out"
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:gravity="center"
-                    android:text="下班打卡     09:11:44"
-                    android:textSize="18sp"
-                    android:textColor="@color/white" />
-                <TextView
-                    android:id="@+id/local_out"
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_alignParentBottom="true"
-                    android:text="已进入Wi-Fi考勤范围"
-                    android:textColor="@color/gray"/>
+                        <TextView
+                            android:id="@+id/clock_in"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="上班打卡09:11:44"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/local_in"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentBottom="true"
+                            android:text="已进入Wi-Fi考勤范围"
+                            android:textColor="@color/gray"/>
 
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+                        <com.example.shixi_a.myapplication.widget.SemiCircleRectView
+                            android:id="@+id/circle_out"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            app:backgroundColor="@color/colorPrimary"
+                            android:gravity="center"
+                            android:text="下"
+                            android:textColor="@color/white"/>
+                        <com.example.shixi_a.myapplication.widget.SemiCircleRectView
+                            android:id="@+id/circle_out_dark"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            app:backgroundColor="@color/gray"
+                            android:gravity="center"
+                            android:text="下"
+                            android:textColor="@color/white"
+                            android:visibility="gone"/>
+                        <TextView
+                            android:id="@+id/tv_out"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="下班时间18:00"
+                            android:textSize="16sp"
+                            android:textColor="@color/dark_grey"/>
+
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/rl_clock_out"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="160dp"
+                            android:layout_height="160dp"
+                            android:src="@drawable/checkno_bg"
+                            android:layout_centerInParent="true"/>
+                        <TextView
+                            android:id="@+id/clock_out"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:gravity="center"
+                            android:layout_centerInParent="true"
+                            android:text="下班打卡09:11:44"
+                            android:textSize="18sp"
+                            android:textColor="@color/white" />
+                        <TextView
+                            android:id="@+id/local_out"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:layout_alignParentBottom="true"
+                            android:text="已进入Wi-Fi考勤范围"
+                            android:textColor="@color/gray"/>
+
+                    </RelativeLayout>
+                </LinearLayout>
+                <View
+                    android:id="@+id/first_line"
+                    android:layout_width="1dp"
+                    android:layout_height="240dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="50dp"
+                    android:background="@color/gray"/>
+                <View
+                    android:id="@+id/second_line"
+                    android:layout_width="1dp"
+                    android:layout_below="@id/first_line"
+                    android:layout_height="220dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/gray"/>
             </RelativeLayout>
         </LinearLayout>
-        <View
-            android:id="@+id/first_line"
-            android:layout_width="1dp"
-            android:layout_height="240dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="50dp"
-            android:background="@color/gray"/>
-        <View
-            android:id="@+id/second_line"
-            android:layout_width="1dp"
-            android:layout_below="@id/first_line"
-            android:layout_height="220dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="30dp"
-            android:background="@color/gray"/>
-    </RelativeLayout>
+    </ScrollView>
+
 
 </com.example.shixi_a.myapplication.widget.ScrollChildSwipeRefreshLayout>
