--- a/app/src/main/res/layout/apply_leave_content.xml
+++ b/app/src/main/res/layout/apply_leave_content.xml
@@ -67,7 +67,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/textTitle"
-                    android:text="请选择"
+                    android:hint="请选择"
+                    android:textColorHint="@color/gray"
                     android:textColor="@color/gray"/>
 
                 <ImageView
@@ -99,7 +100,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/textTitle"
-                    android:text="请选择"
+                    android:hint="请选择"
+                    android:textColorHint="@color/gray"
                     android:textColor="@color/gray"/>
 
                 <ImageView
