--- a/app/src/main/res/layout/clock_content.xml
+++ b/app/src/main/res/layout/clock_content.xml
@@ -63,16 +63,18 @@
                         <ImageView
                             android:id="@+id/clock_bg"
                             android:layout_width="160dp"
-                            android:layout_height="160dp"
+                            android:layout_height="180dp"
                             android:src="@drawable/checkno_bg"
-                            android:layout_centerInParent="true"/>
+                            android:layout_centerInParent="true"
+                            android:paddingBottom="20dp"/>
 
                         <TextView
                             android:id="@+id/clock_in"
                             android:layout_width="100dp"
-                            android:layout_height="100dp"
+                            android:layout_height="120dp"
                             android:layout_centerInParent="true"
                             android:gravity="center"
+                            android:paddingBottom="20dp"
                             android:text="上班打卡09:11:44"
                             android:textColor="@color/white"
                             android:textSize="18sp" />
@@ -127,14 +129,16 @@
                         android:orientation="vertical">
                         <ImageView
                             android:layout_width="160dp"
-                            android:layout_height="160dp"
+                            android:layout_height="180dp"
                             android:src="@drawable/checkno_bg"
-                            android:layout_centerInParent="true"/>
+                            android:layout_centerInParent="true"
+                            android:paddingBottom="20dp"/>
                         <TextView
                             android:id="@+id/clock_out"
                             android:layout_width="100dp"
-                            android:layout_height="100dp"
+                            android:layout_height="120dp"
                             android:gravity="center"
+                            android:paddingBottom="20dp"
                             android:layout_centerInParent="true"
                             android:text="下班打卡09:11:44"
                             android:textSize="18sp"
