--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -32,14 +32,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@color/defaultBack">
                 <ListView
                     android:id="@+id/message_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:divider="#00000000"
-                    android:dividerHeight="10dp"
                     android:scrollbars="none"/>
             </LinearLayout>
 
