--- a/app/src/main/res/layout/clock_content.xml
+++ b/app/src/main/res/layout/clock_content.xml
@@ -83,7 +83,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
-                            android:layout_alignParentBottom="true"
+                            android:layout_below="@id/clock_in"
+                            android:layout_marginTop="10dp"
                             android:text="已进入Wi-Fi考勤范围"
                             android:textColor="@color/gray"/>
 
@@ -128,6 +129,7 @@
                         android:layout_height="200dp"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/check_off"
                             android:layout_width="160dp"
                             android:layout_height="180dp"
                             android:src="@drawable/checkno_bg"
@@ -149,7 +151,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
-                            android:layout_alignParentBottom="true"
+                            android:layout_below="@id/clock_out"
                             android:text="已进入Wi-Fi考勤范围"
                             android:textColor="@color/gray"/>
 
