--- a/app/src/main/res/layout/normal_reimburse_content.xml
+++ b/app/src/main/res/layout/normal_reimburse_content.xml
@@ -10,11 +10,9 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/defaultBack"
-            android:paddingBottom="60dp">
+            android:background="@color/defaultBack">
 
             <LinearLayout
-                android:id="@+id/leave_type"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/menu_item_bg"
@@ -27,7 +25,7 @@
                     style="@style/textTitle"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="请假类型"
+                    android:text="报销人"
                     android:textColor="@color/dark_grey"/>
 
                 <TextView
@@ -35,18 +33,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/textTitle"
-                    android:text="请选择"
-                    android:textColor="@color/gray"/>
+                    android:text="renshi"
+                    android:textColor="@color/gray"
+                    android:layout_marginRight="31dp"/>
 
-                <ImageView
-                    android:layout_width="11dp"
-                    android:layout_height="22dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/next" />
+
 
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/leave_start"
+                android:id="@+id/lv_real_person"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/menu_item_bg"
@@ -59,11 +54,11 @@
                     style="@style/textTitle"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="开始时间"
+                    android:text="实际报销人"
                     android:textColor="@color/dark_grey"/>
 
                 <TextView
-                    android:id="@+id/Stime"
+                    android:id="@+id/real_person"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/textTitle"
@@ -79,7 +74,7 @@
 
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/leave_end"
+                android:id="@+id/lv_cost_time"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/menu_item_bg"
@@ -92,11 +87,11 @@
                     style="@style/textTitle"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="结束时间"
+                    android:text="浪费时间"
                     android:textColor="@color/dark_grey"/>
 
                 <TextView
-                    android:id="@+id/Etime"
+                    android:id="@+id/cost_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/textTitle"
@@ -112,15 +107,8 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="补交当前时间之前的请假需人事修改否则不需要"
-                android:textColor="@color/gray"
-                android:layout_margin="10dp"/>
-
             <LinearLayout
-                android:id="@+id/leave_renshi_edit"
+                android:id="@+id/lv_total_cost"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/menu_item_bg"
@@ -132,113 +120,93 @@
                     android:layout_width="wrap_content"
                     style="@style/textTitle"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="人事修改"
-                    android:textColor="@color/dark_grey"/>
-
-                <TextView
-                    android:id="@+id/renshi_change"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/textTitle"
-                    android:text="不需要"
-                    android:textColor="@color/gray"/>
-
-                <ImageView
-                    android:layout_width="11dp"
-                    android:layout_height="22dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/next" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="请假超过三天时需填写"
-                android:textColor="@color/gray"
-                android:layout_margin="10dp"/>
-
-            <LinearLayout
-                android:id="@+id/leave_turnover"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="@drawable/menu_item_bg"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    style="@style/textTitle"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="工作交接人"
-                    android:textColor="@color/dark_grey"/>
-
-                <TextView
-                    android:id="@+id/over_person"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/textTitle"
-                    android:text="请选择"
-                    android:textColor="@color/gray"/>
-
-                <ImageView
-                    android:layout_width="11dp"
-                    android:layout_height="22dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/next" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/leave_reason"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="@drawable/menu_item_bg"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    style="@style/textTitle"
-                    android:layout_height="wrap_content"
-
                     android:text="请假原因"
                     android:textColor="@color/dark_grey"/>
 
                 <EditText
-                    android:id="@+id/leave_matter"
+                    android:id="@+id/total_cost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:hint="请输入请假原因"
+                    android:gravity="end"
+                    android:layout_margin="10dp"
+                    android:hint="请输入总费用"
                     android:textColorHint="@color/gray"
                     android:background="@drawable/normal_bg"
                     android:textSize="16sp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/lv_cost_detail"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@drawable/menu_item_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/textTitle"
+                    android:layout_height="wrap_content"
+                    android:text="费用明细"
+                    android:textColor="@color/dark_grey"/>
 
+                <EditText
+                    android:id="@+id/cost_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_margin="10dp"
+                    android:hint="请输入费用明细"
+                    android:textColorHint="@color/gray"
+                    android:background="@drawable/normal_bg"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/lv_bills_count"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@drawable/menu_item_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    style="@style/textTitle"
+                    android:layout_height="wrap_content"
+                    android:text="单据数量（张）"
+                    android:textColor="@color/dark_grey"/>
+
+                <EditText
+                    android:id="@+id/bills_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_margin="10dp"
+                    android:hint="请输入单据张数"
+                    android:textColorHint="@color/gray"
+                    android:background="@drawable/normal_bg"
+                    android:textSize="16sp"/>
             </LinearLayout>
 
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:padding="10dp"
+                android:gravity="bottom"
+                android:layout_weight="1"
+                android:background="@color/defaultBack">
+                <Button
+                    android:id="@+id/submit"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:text="提   交"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_bg"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:padding="10dp"
-        android:gravity="bottom">
-        <Button
-            android:id="@+id/submit"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="提   交"
-            android:textColor="@color/white"
-            android:background="@drawable/button_bg"/>
-    </LinearLayout>
 
 </RelativeLayout>
