--- a/app/src/main/res/layout/leave_detail_content.xml
+++ b/app/src/main/res/layout/leave_detail_content.xml
@@ -103,6 +103,63 @@
 
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:background="@drawable/menu_item_bg"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        style="@style/textTitle"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="请假开始时间"
+                        android:textColor="@color/dark_grey"/>
+
+                    <TextView
+                        android:id="@+id/Stime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/textTitle"
+                        android:text="请选择"
+                        android:textColor="@color/gray"
+                        android:layout_marginRight="10dp"/>
+
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:background="@drawable/menu_item_bg"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        style="@style/textTitle"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="请假结束时间"
+                        android:textColor="@color/dark_grey"/>
+
+                    <TextView
+                        android:id="@+id/Etime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/textTitle"
+                        android:text="请选择"
+                        android:textColor="@color/gray"
+                        android:layout_marginRight="10dp"/>
+
+
+
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
@@ -131,62 +188,99 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
+                    android:id="@+id/offset"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:background="@drawable/menu_item_bg"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:background="@drawable/menu_item_bg"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        style="@style/textTitle"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="开始时间"
-                        android:textColor="@color/dark_grey"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            style="@style/textTitle"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="加班开始时间"
+                            android:textColor="@color/dark_grey"/>
 
-                    <TextView
-                        android:id="@+id/Stime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/textTitle"
-                        android:text="请选择"
-                        android:textColor="@color/gray"
-                        android:layout_marginRight="10dp"/>
+                        <TextView
+                            android:id="@+id/OffStime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/textTitle"
+                            android:text="请选择"
+                            android:textColor="@color/gray"
+                            android:layout_marginRight="10dp"/>
 
 
 
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:background="@drawable/menu_item_bg"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            style="@style/textTitle"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="加班结束时间"
+                            android:textColor="@color/dark_grey"/>
+
+                        <TextView
+                            android:id="@+id/OffEtime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/textTitle"
+                            android:text="请选择"
+                            android:textColor="@color/gray"
+                            android:layout_marginRight="10dp"/>
+
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp"
+                        android:background="@drawable/menu_item_bg"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="16dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            style="@style/textTitle"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="加班内容"
+                            android:textColor="@color/dark_grey"/>
+
+                        <TextView
+                            android:id="@+id/Offcontent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            style="@style/textTitle"
+                            android:text="请选择"
+                            android:textColor="@color/gray"
+                            android:layout_marginRight="10dp"/>
+
+
+
+                    </LinearLayout>
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:background="@drawable/menu_item_bg"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="16dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        style="@style/textTitle"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="结束时间"
-                        android:textColor="@color/dark_grey"/>
-
-                    <TextView
-                        android:id="@+id/Etime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/textTitle"
-                        android:text="请选择"
-                        android:textColor="@color/gray"
-                        android:layout_marginRight="10dp"/>
-
-
-
-                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
