--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -62,12 +62,7 @@
                 android:textColor="@color/gray"
                 android:text="email"/>
         </LinearLayout>
-        <ImageView
-            android:layout_width="11dp"
-            android:layout_height="22dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/arrow_my"
-            android:layout_gravity="center"/>
+
 
     </LinearLayout>
     <LinearLayout
@@ -98,6 +93,7 @@
             android:layout_gravity="center"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/help"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
@@ -124,6 +120,7 @@
             android:layout_gravity="center"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/set"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
