--- a/app/src/main/res/layout/activity_update_tempo.xml
+++ b/app/src/main/res/layout/activity_update_tempo.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/defaultBack"
     >
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -28,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginRight="20dp"
-            android:text="@string/save"
+            android:text="确定"
             android:textColor="@color/white"
             android:textSize="16sp" />
     </android.support.v7.widget.Toolbar>
@@ -37,35 +38,60 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:background="@color/white"
         android:focusableInTouchMode="true">
         <TextView
             android:id="@+id/tempo_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="当前进度："/>
+            android:text="当前进度："
+            android:textSize="16sp"
+            android:textColor="@color/dark_grey"/>
 
-        <com.xw.repo.BubbleSeekBar
-            android:id="@+id/seekbar"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:gravity="center">
+
+            <com.xw.repo.BubbleSeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:bsb_auto_adjust_section_mark="false"
+                app:bsb_second_track_color="@color/color_blue"
+                app:bsb_section_text_position="sides"
+                app:bsb_show_section_text="true"
+                app:bsb_show_thumb_text="true"
+                app:bsb_touch_to_seek="true"
+                app:bsb_always_show_bubble="false"
+                />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:bsb_auto_adjust_section_mark="false"
-            app:bsb_second_track_color="@color/color_blue"
-            app:bsb_section_count="5"
-            app:bsb_section_text_position="sides"
-            app:bsb_show_section_mark="true"
-            app:bsb_show_section_text="true"
-            app:bsb_show_thumb_text="true"
-            app:bsb_thumb_text_size="18sp"
-            app:bsb_touch_to_seek="true"
-            app:bsb_always_show_bubble="false"
-            />
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/stop_task"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/stop"
+                />
+        </LinearLayout>
         <EditText
             android:id="@+id/memo"
+            android:gravity="top"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:hint="说点什么吧"
-            android:textSize="12sp"/>
+            android:background="@drawable/normal_bg"
+            android:textSize="14sp"
+            android:textColorHint="@color/gray"
+            android:inputType="textMultiLine"/>
     </LinearLayout>
 
 
