--- a/app/src/main/res/layout/classify_add_content.xml
+++ b/app/src/main/res/layout/classify_add_content.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:padding="10dp"
+    android:background="@color/white">
 
 
     <TextView
@@ -16,10 +17,12 @@
         android:id="@+id/et_claTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        style="@style/taskinputcontent"
         android:ems="10"
         android:inputType="text"
-        android:hint="@string/input_cla_name" />
+        android:hint="@string/input_cla_name"
+        android:textColorHint="@color/gray"
+        android:background="@drawable/normal_bg"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -33,6 +36,8 @@
         android:layout_width="match_parent"
         style="@style/taskinputcontent"
         android:hint="@string/input_cla_descript"
+        android:textColorHint="@color/gray"
+        android:background="@drawable/normal_bg"
         android:ems="10"
         android:inputType="textMultiLine" />
 
