--- a/app/src/main/res/layout/list_item_record.xml
+++ b/app/src/main/res/layout/list_item_record.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/name"
         android:gravity="start"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="renshi"
         android:textSize="18sp"
