--- a/app/src/main/res/layout/process_add_content.xml
+++ b/app/src/main/res/layout/process_add_content.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/defaultBack">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:orientation="vertical"
+        android:background="@color/white"
         android:paddingTop="10dp">
         <TextView
             android:id="@+id/textView1"
@@ -21,9 +23,11 @@
             android:id="@+id/Process_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:ems="10"
             android:textSize="14sp"
-            android:hint="请输入流程标题" />
+            android:hint="请输入流程标题"
+            android:background="@drawable/normal_bg"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -33,9 +37,11 @@
             android:text="流程内容" />
 
         <EditText
+            android:layout_margin="10dp"
             android:id="@+id/Process_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/normal_bg"
             android:gravity="top"
             android:ems="10"
             android:textSize="14sp"
@@ -44,15 +50,12 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/defaultBack" />
     <LinearLayout
         android:id="@+id/process_principal"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@drawable/menu_item_bg"
+        android:layout_marginTop="15dp"
         android:gravity="center|left"
         android:orientation="horizontal"
         android:paddingLeft="16dp">
