--- a/app/src/main/res/layout/project_add_content.xml
+++ b/app/src/main/res/layout/project_add_content.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:background="@color/white"
+    android:padding="10dp">
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
@@ -15,10 +16,12 @@
         android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        style="@style/taskinputcontent"
+        android:background="@drawable/normal_bg"
+        android:hint="@string/input_pro_name"
+        android:textColorHint="@color/gray"
         android:ems="10"
-        android:inputType="text"
-        android:hint="@string/input_pro_name" />
+        android:inputType="text"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -31,7 +34,9 @@
         android:id="@+id/et_description"
         android:layout_width="match_parent"
         style="@style/taskinputcontent"
+        android:background="@drawable/normal_bg"
         android:hint="@string/input_pro_descript"
+        android:textColorHint="@color/gray"
         android:ems="10"
         android:inputType="textMultiLine" />
 
