--- a/app/src/main/res/layout/task_content.xml
+++ b/app/src/main/res/layout/task_content.xml
@@ -25,7 +25,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:divider="#00000000"
-                android:dividerHeight="10dp" />
+                android:dividerHeight="10dp"
+                android:scrollbars="none"/>
 
         </LinearLayout>
 
