--- a/app/src/main/res/layout/task_detail_content.xml
+++ b/app/src/main/res/layout/task_detail_content.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/task_detail_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/defaultBack">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +15,7 @@
             android:layout_height="match_parent">
             <LinearLayout
                 android:id="@+id/task_detail_Container"
-                android:paddingBottom="60dp"
+                android:paddingBottom="80dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -108,16 +109,14 @@
                         android:src="@drawable/link" />
 
                 </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"
-                    android:background="#ECF2F2"/>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginTop="10dp">
                     <LinearLayout
                         android:id="@+id/process"
                         android:layout_width="match_parent"
@@ -244,29 +243,32 @@
         <LinearLayout
             android:id="@+id/buttonView"
             android:orientation="horizontal"
+            android:gravity="center"
             android:padding="10dp"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:background="@color/white"
+            android:weightSum="1">
             <Button
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_bg"
+                android:layout_height="30dp"
+                android:background="@drawable/button_r_bg"
                 android:text="拒绝"
                 android:layout_marginRight="5dp"
                 android:textColor="@color/white"
-                android:layout_weight="1"/>
+                android:layout_weight="0.5"/>
 
             <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:background="@drawable/button_bg"
                 android:text="接收"
                 android:textColor="@color/white"
-                android:layout_weight="1"/>
+                android:layout_weight="0.5"/>
 
         </LinearLayout>
     </RelativeLayout>
