--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="android:gravity">top|left</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_height">90dp</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
     <style name="MyRatingBar" parent="@android:style/Widget.Holo.RatingBar">
