--- a/app/src/main/res/layout/normal_reimburse_content.xml
+++ b/app/src/main/res/layout/normal_reimburse_content.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="@color/defaultBack">
     <ScrollView
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -10,6 +11,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="60dp"
             android:background="@color/defaultBack">
 
             <LinearLayout
@@ -174,7 +176,7 @@
                     android:layout_width="wrap_content"
                     style="@style/textTitle"
                     android:layout_height="wrap_content"
-                    android:text="单据数量（张）"
+                    android:text="单据张数（张）"
                     android:textColor="@color/dark_grey"/>
 
                 <EditText
@@ -188,25 +190,24 @@
                     android:background="@drawable/normal_bg"
                     android:textSize="16sp"/>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:padding="10dp"
-                android:gravity="bottom"
-                android:layout_weight="1"
-                android:background="@color/defaultBack">
-                <Button
-                    android:id="@+id/submit"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:text="提   交"
-                    android:textColor="@color/white"
-                    android:background="@drawable/button_bg"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white">
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:text="提   交"
+            android:textColor="@color/white"
+            android:background="@drawable/button_bg"/>
+    </LinearLayout>
 
 
 </RelativeLayout>
