业务招待报销修改 差旅报销修改

--- a/app/src/main/res/layout/activity_entertainment_reimburse.xml
+++ b/app/src/main/res/layout/activity_entertainment_reimburse.xml
@@ -14,6 +14,7 @@
         android:theme="?attr/actionBarTheme"
         toolbar:navigationIcon="@drawable/ic_navigate_before_black_24dp">
         <TextView
+            android:id="@+id/toolbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
